@@ -114,9 +114,8 @@ public class ERXNavigationMenuItem extends ERXStatelessComponent {
         		NSMutableDictionary bindings = navigationItem().queryBindings().mutableClone();
         		bindings.setObjectForKey(context().contextID(), "__cid");
         		return context().directActionURLForActionNamed(navigationItem().directActionName(), bindings);
-        	} else {
-        		return context().componentActionURL();
-            }
+        	}
+        	return context().componentActionURL();
         }
 
         // If the user specified some javascript, put that into the HREF and return it
@@ -133,11 +132,11 @@ public class ERXNavigationMenuItem extends ERXStatelessComponent {
     public WOComponent menuItemSelected() {
         WOComponent anActionResult = null;
 
-        if ((navigationItem().action() != null) && (navigationItem().action() != "")) {
+        if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().action())) {
             anActionResult = (WOComponent)valueForKeyPath(navigationItem().action());
-        } else if ((navigationItem().pageName() != null) && (navigationItem().pageName() != "")) {
+        } else if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().pageName())) {
             anActionResult = pageWithName(navigationItem().pageName());
-        } else if ((navigationItem().directActionName() != null) && (navigationItem().directActionName() != "")) {
+        } else if (!ERXStringUtilities.stringIsNullOrEmpty(navigationItem().directActionName())) {
             // FIXME: Need to support directAction classes
             if(_linkDirectlyToDirectActions) {
                 ERXDirectAction da = new ERXDirectAction(context().request());
@@ -256,7 +255,7 @@ public class ERXNavigationMenuItem extends ERXStatelessComponent {
 
 	public boolean omitLabelSpanTag() {
 		if (_omitLabelSpanTag == null) {
-			_omitLabelSpanTag = new Boolean(!ERXProperties.booleanForKeyWithDefault("er.extensions.ERXNavigationManager.includeLabelSpanTag", false));
+			_omitLabelSpanTag = Boolean.valueOf(!ERXProperties.booleanForKeyWithDefault("er.extensions.ERXNavigationManager.includeLabelSpanTag", false));
 		}
 		return _omitLabelSpanTag;
 	}
