@@ -37,6 +37,7 @@ import javax.xml.parsers.ParserConfigurationException;
 import javax.xml.parsers.SAXParser;
 import javax.xml.parsers.SAXParserFactory;
 
+import org.apache.commons.lang.CharEncoding;
 import org.apache.xml.serialize.OutputFormat;
 import org.apache.xml.serialize.XMLSerializer;
 import org.w3c.dom.Document;
@@ -78,7 +79,7 @@ import com.webobjects.foundation._NSUtilities;
  *JSON Serialization Example:
  *
  * <pre>
- * NSDictionary dict<String,Object> = new NSDictionary<String,Object>(new String[] { "one", "two" }, new Object[] {new Integer(1), new Integer(2)});
+ * NSDictionary dict<String,Object> = new NSDictionary<String,Object>(new String[] { "one", "two" }, new Object[] {Integer.valueOf(1), Integer.valueOf(2)});
  * String jsonString = ERXPropertyListSerialization.jsonStringFromPropertyList(dict);
  * </pre>
  *
@@ -559,7 +560,7 @@ public class ERXPropertyListSerialization {
 					}
 					return;
 				}
-				this.saveCharContent();
+				saveCharContent();
 				switch (aType) {
 					case PLIST:
 						// This has been taken care of before
@@ -805,11 +806,11 @@ public class ERXPropertyListSerialization {
 							lastNode.setTagOpen(false);
 							break;
 						case STRING:
-							lastNode.setValue(this.unescapeString(_curChars.toString()));
+							lastNode.setValue(unescapeString(_curChars.toString()));
 							lastNode.setTagOpen(false);
 							break;
 						case KEY:
-							lastNode.setValue(this.unescapeString(_curChars.toString()));
+							lastNode.setValue(unescapeString(_curChars.toString()));
 							lastNode.setTagOpen(false);
 							break;
 						case DATE:
@@ -855,7 +856,7 @@ public class ERXPropertyListSerialization {
 									if (!Character.isWhitespace(_curChars.charAt(i)))
 										stringbuffer.append(_curChars.charAt(i));
 
-								byte abyte0[] = stringbuffer.toString().getBytes("US-ASCII");
+								byte abyte0[] = stringbuffer.toString().getBytes(CharEncoding.US_ASCII);
 								byte abyte64[] = _NSBase64.decode(abyte0);
 								if (abyte64 != null && abyte64.length > 0) {
 									lastNode.setValue(new NSData(abyte64));
@@ -945,7 +946,7 @@ public class ERXPropertyListSerialization {
 		public Object parseStringIntoPlist(String string) {
 			DictionaryParser dictionaryParser = new DictionaryParser();
 			try {
-				SAXParser parser = this.newSAXParser();
+				SAXParser parser = newSAXParser();
 				if (parser != null)
 					parser.parse(new InputSource(new StringReader(string)), dictionaryParser);
 			} catch (SAXException exception) {
@@ -970,12 +971,12 @@ public class ERXPropertyListSerialization {
 				return null;
 			StringBuffer stringbuffer = new StringBuffer(128);
 			stringbuffer.append("<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"yes\"?>");
-			this._appendNewLineToStringBuffer(stringbuffer, 0);
+			_appendNewLineToStringBuffer(stringbuffer, 0);
 			stringbuffer.append("<!DOCTYPE plist PUBLIC \"" + DictionaryParser.PUBLIC_APPLE_PLIST_1_0 + "\" \"http://www.apple.com/DTDs/PropertyList-1.0.dtd\">");
-			this._appendNewLineToStringBuffer(stringbuffer, 0);
+			_appendNewLineToStringBuffer(stringbuffer, 0);
 			stringbuffer.append("<plist version=\"1.0\">");
-			this._appendNewLineToStringBuffer(stringbuffer, 0);
-			this._appendObjectToStringBuffer(plist, stringbuffer, 1);
+			_appendNewLineToStringBuffer(stringbuffer, 0);
+			_appendObjectToStringBuffer(plist, stringbuffer, 1);
 			stringbuffer.append("</plist>");
 			return stringbuffer.toString();
 		}
@@ -1007,31 +1008,31 @@ public class ERXPropertyListSerialization {
 		}
 
 		private void _appendStringToStringBuffer(String s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.STRING.openTag());
-			stringbuffer.append(this.escapeString(s));
+			stringbuffer.append(escapeString(s));
 			stringbuffer.append(DictionaryParser.XMLNode.Type.STRING.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendIntegerToStringBuffer(Number s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.INTEGER.openTag());
 			stringbuffer.append(s.toString());
 			stringbuffer.append(DictionaryParser.XMLNode.Type.INTEGER.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendFloatToStringBuffer(Number s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.REAL.openTag());
 			stringbuffer.append(s.toString());
 			stringbuffer.append(DictionaryParser.XMLNode.Type.REAL.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendBooleanToStringBuffer(Boolean s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			if (s.booleanValue()) {
 				stringbuffer.append(DictionaryParser.XMLNode.Type.TRUE.openTag());
 				stringbuffer.append(DictionaryParser.XMLNode.Type.TRUE.closeTag());
@@ -1039,19 +1040,19 @@ public class ERXPropertyListSerialization {
 				stringbuffer.append(DictionaryParser.XMLNode.Type.FALSE.openTag());
 				stringbuffer.append(DictionaryParser.XMLNode.Type.FALSE.closeTag());
 			}
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendDateToStringBuffer(Date s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DATE.openTag());
 			stringbuffer.append(_dateFormat.format(s));
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DATE.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendDataToStringBuffer(NSData s, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DATA.openTag());
 			try {
 				stringbuffer.append(new String(_NSBase64.encode(s.bytes()), _NSStringUtilities.UTF8_ENCODING));
@@ -1060,37 +1061,37 @@ public class ERXPropertyListSerialization {
 				throw NSForwardException._runtimeExceptionForThrowable(e);
 			}
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DATA.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
 		private void _appendArrayToStringBuffer(List<?> vector, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.ARRAY.openTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 			for (Iterator<?> iterator = vector.iterator(); iterator.hasNext();) {
 				_appendObjectToStringBuffer(iterator.next(), stringbuffer, i + 1);
 			}
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.ARRAY.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
         private void _appendNSArrayToStringBuffer(NSArray vector, StringBuffer stringbuffer, int i) {
-            this._appendIndentationToStringBuffer(stringbuffer, i);
+            _appendIndentationToStringBuffer(stringbuffer, i);
             stringbuffer.append(DictionaryParser.XMLNode.Type.ARRAY.openTag());
-            this._appendNewLineToStringBuffer(stringbuffer, i);
+            _appendNewLineToStringBuffer(stringbuffer, i);
             for (Enumeration iterator = vector.objectEnumerator(); iterator.hasMoreElements();) {
                 _appendObjectToStringBuffer(iterator.nextElement(), stringbuffer, i + 1);
             }
-            this._appendIndentationToStringBuffer(stringbuffer, i);
+            _appendIndentationToStringBuffer(stringbuffer, i);
             stringbuffer.append(DictionaryParser.XMLNode.Type.ARRAY.closeTag());
-            this._appendNewLineToStringBuffer(stringbuffer, i);
+            _appendNewLineToStringBuffer(stringbuffer, i);
         }
 
 		private void _appendDictionaryToStringBuffer(Map<?, ?> table, StringBuffer stringbuffer, int i) {
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DICTIONARY.openTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 			for (Iterator<?> iterator = table.keySet().iterator(); iterator.hasNext();) {
 				Object key = iterator.next();
 
@@ -1099,23 +1100,23 @@ public class ERXPropertyListSerialization {
 					key = NULL;
 				}
 
-				this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+				_appendIndentationToStringBuffer(stringbuffer, i + 1);
 				stringbuffer.append(DictionaryParser.XMLNode.Type.KEY.openTag());
-				stringbuffer.append(this.escapeString(key.toString()));
+				stringbuffer.append(escapeString(key.toString()));
 				stringbuffer.append(DictionaryParser.XMLNode.Type.KEY.closeTag());
-				this._appendNewLineToStringBuffer(stringbuffer, i + 1);
+				_appendNewLineToStringBuffer(stringbuffer, i + 1);
 				_appendObjectToStringBuffer((key.equals(NULL) ? table.get(null) : table.get(key)), stringbuffer, i + 1);
-				this._appendNewLineToStringBuffer(stringbuffer, i + 1);
+				_appendNewLineToStringBuffer(stringbuffer, i + 1);
 			}
-			this._appendIndentationToStringBuffer(stringbuffer, i);
+			_appendIndentationToStringBuffer(stringbuffer, i);
 			stringbuffer.append(DictionaryParser.XMLNode.Type.DICTIONARY.closeTag());
-			this._appendNewLineToStringBuffer(stringbuffer, i);
+			_appendNewLineToStringBuffer(stringbuffer, i);
 		}
 
         private void _appendNSDictionaryToStringBuffer(NSDictionary table, StringBuffer stringbuffer, int i) {
-            this._appendIndentationToStringBuffer(stringbuffer, i);
+            _appendIndentationToStringBuffer(stringbuffer, i);
             stringbuffer.append(DictionaryParser.XMLNode.Type.DICTIONARY.openTag());
-            this._appendNewLineToStringBuffer(stringbuffer, i);
+            _appendNewLineToStringBuffer(stringbuffer, i);
             for (Enumeration iterator = table.keyEnumerator(); iterator.hasMoreElements();) {
                 Object key = iterator.nextElement();
 
@@ -1124,17 +1125,17 @@ public class ERXPropertyListSerialization {
                     key = NULL;
                 }
 
-                this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+                _appendIndentationToStringBuffer(stringbuffer, i + 1);
                 stringbuffer.append(DictionaryParser.XMLNode.Type.KEY.openTag());
-                stringbuffer.append(this.escapeString(key.toString()));
+                stringbuffer.append(escapeString(key.toString()));
                 stringbuffer.append(DictionaryParser.XMLNode.Type.KEY.closeTag());
-                this._appendNewLineToStringBuffer(stringbuffer, i + 1);
+                _appendNewLineToStringBuffer(stringbuffer, i + 1);
                 _appendObjectToStringBuffer((key.equals(NULL) ? table.objectForKey(null) : table.objectForKey(key)), stringbuffer, i + 1);
-                this._appendNewLineToStringBuffer(stringbuffer, i + 1);
+                _appendNewLineToStringBuffer(stringbuffer, i + 1);
             }
-            this._appendIndentationToStringBuffer(stringbuffer, i);
+            _appendIndentationToStringBuffer(stringbuffer, i);
             stringbuffer.append(DictionaryParser.XMLNode.Type.DICTIONARY.closeTag());
-            this._appendNewLineToStringBuffer(stringbuffer, i);
+            _appendNewLineToStringBuffer(stringbuffer, i);
         }
 
 		/**
@@ -1424,7 +1425,7 @@ public class ERXPropertyListSerialization {
 			if (obj instanceof String)
 				return obj;
 			if (obj instanceof StringBuffer)
-				return new String((StringBuffer) obj);
+				return ((StringBuffer) obj).toString();
 			if (obj instanceof NSData)
 				return ((NSData) obj).clone();
 			if (obj instanceof NSArray<?>) {
@@ -1460,7 +1461,7 @@ public class ERXPropertyListSerialization {
 			if (plist == null)
 				return null;
 			StringBuffer buffer = new StringBuffer(128);
-			this._appendObjectToStringBuffer(plist, buffer, 0, suppressWhitespace);
+			_appendObjectToStringBuffer(plist, buffer, 0, suppressWhitespace);
 			return buffer.toString();
 		}
 
@@ -1474,8 +1475,8 @@ public class ERXPropertyListSerialization {
 			_startOfLineCharIndex = 0;
 			aobj[0] = null;
 			int i = 0;
-			i = this._readObjectIntoObjectReference(charArray, i, aobj);
-			i = this._skipWhitespaceAndComments(charArray, i);
+			i = _readObjectIntoObjectReference(charArray, i, aobj);
+			i = _skipWhitespaceAndComments(charArray, i);
 			if (i != EOT) {
 				throw new IllegalArgumentException("parseStringIntoPlist parsed an object, but there's still more text in the string. A plist should contain only one top-level object. Line number: "
 						+ _lineNumber + ", column: " + (i - _startOfLineCharIndex) + ".");
@@ -1563,10 +1564,10 @@ public class ERXPropertyListSerialization {
 					byte byte3 = (byte) (c & 0xf);
 					c >>= '\004';
 					stringbuffer.append("\\u");
-					stringbuffer.append(this._hexDigitForNibble(byte3));
-					stringbuffer.append(this._hexDigitForNibble(byte2));
-					stringbuffer.append(this._hexDigitForNibble(byte1));
-					stringbuffer.append(this._hexDigitForNibble(byte0));
+					stringbuffer.append(_hexDigitForNibble(byte3));
+					stringbuffer.append(_hexDigitForNibble(byte2));
+					stringbuffer.append(_hexDigitForNibble(byte1));
+					stringbuffer.append(_hexDigitForNibble(byte0));
 				}
 			}
 			stringbuffer.append('"');
@@ -1581,8 +1582,8 @@ public class ERXPropertyListSerialization {
 				byte byte1 = (byte) (byte0 & 0xf);
 				byte0 >>= 4;
 				byte byte2 = (byte) (byte0 & 0xf);
-				stringbuffer.append(this._hexDigitForNibble(byte2));
-				stringbuffer.append(this._hexDigitForNibble(byte1));
+				stringbuffer.append(_hexDigitForNibble(byte2));
+				stringbuffer.append(_hexDigitForNibble(byte1));
 			}
 
 			stringbuffer.append('>');
@@ -1591,7 +1592,7 @@ public class ERXPropertyListSerialization {
 
 		/*
 		 * There are a couple of popular ways to serialize dates. This adheres http://www.json.org/json.js For example, this would serialize Dates as ISO strings. Date.prototype.toJSON = function (key) { function f(n) { // Format integers to have at least two digits. return n < 10 ? '0' + n : n; }
-		 * return this.getUTCFullYear() + '-' + f(this.getUTCMonth() + 1) + '-' + f(this.getUTCDate()) + 'T' + f(this.getUTCHours()) + ':' + f(this.getUTCMinutes()) + ':' + f(this.getUTCSeconds()) + 'Z'; };
+		 * return getUTCFullYear() + '-' + f(getUTCMonth() + 1) + '-' + f(getUTCDate()) + 'T' + f(getUTCHours()) + ':' + f(getUTCMinutes()) + ':' + f(getUTCSeconds()) + 'Z'; };
 		 */
 		private void _appendDateToStringBuffer(Date date, StringBuffer stringbuffer) {
 			stringbuffer.append('"');
@@ -1607,15 +1608,15 @@ public class ERXPropertyListSerialization {
 					if (k > 0)
 						stringbuffer.append(',');
 					if (!suppressWhitespace) {
-						this._appendNewLineToStringBuffer(stringbuffer, i);
-						this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+						_appendNewLineToStringBuffer(stringbuffer, i);
+						_appendIndentationToStringBuffer(stringbuffer, i + 1);
 					}
-					this._appendObjectToStringBuffer(nsarray.get(k), stringbuffer, i + 1, suppressWhitespace);
+					_appendObjectToStringBuffer(nsarray.get(k), stringbuffer, i + 1, suppressWhitespace);
 				}
 
 				if (!suppressWhitespace) {
-					this._appendNewLineToStringBuffer(stringbuffer, i);
-					this._appendIndentationToStringBuffer(stringbuffer, i);
+					_appendNewLineToStringBuffer(stringbuffer, i);
+					_appendIndentationToStringBuffer(stringbuffer, i);
 				}
 			}
 			stringbuffer.append(']');
@@ -1629,15 +1630,15 @@ public class ERXPropertyListSerialization {
                     if (k > 0)
                         stringbuffer.append(',');
                     if (!suppressWhitespace) {
-                        this._appendNewLineToStringBuffer(stringbuffer, i);
-                        this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+                        _appendNewLineToStringBuffer(stringbuffer, i);
+                        _appendIndentationToStringBuffer(stringbuffer, i + 1);
                     }
-                    this._appendObjectToStringBuffer(nsarray.objectAtIndex(k), stringbuffer, i + 1, suppressWhitespace);
+                    _appendObjectToStringBuffer(nsarray.objectAtIndex(k), stringbuffer, i + 1, suppressWhitespace);
                 }
 
                 if (!suppressWhitespace) {
-                    this._appendNewLineToStringBuffer(stringbuffer, i);
-                    this._appendIndentationToStringBuffer(stringbuffer, i);
+                    _appendNewLineToStringBuffer(stringbuffer, i);
+                    _appendIndentationToStringBuffer(stringbuffer, i);
                 }
             }
             stringbuffer.append(']');
@@ -1653,12 +1654,12 @@ public class ERXPropertyListSerialization {
 						throw new IllegalArgumentException(
 								"JSON Property list generation failed while attempting to write hashtable. Non-String key found in Hashtable. Property list dictionaries must have String's as keys.");
 					if (!suppressWhitespace) {
-						this._appendNewLineToStringBuffer(stringbuffer, i);
-						this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+						_appendNewLineToStringBuffer(stringbuffer, i);
+						_appendIndentationToStringBuffer(stringbuffer, i + 1);
 					}
-					this._appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
+					_appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
 					stringbuffer.append(" : ");
-					this._appendObjectToStringBuffer(nsdictionary.get(obj), stringbuffer, i + 1, suppressWhitespace);
+					_appendObjectToStringBuffer(nsdictionary.get(obj), stringbuffer, i + 1, suppressWhitespace);
 
 					if (iteration.hasNext()) {
 						stringbuffer.append(',');
@@ -1666,8 +1667,8 @@ public class ERXPropertyListSerialization {
 				}
 
 				if (!suppressWhitespace) {
-					this._appendNewLineToStringBuffer(stringbuffer, i);
-					this._appendIndentationToStringBuffer(stringbuffer, i);
+					_appendNewLineToStringBuffer(stringbuffer, i);
+					_appendIndentationToStringBuffer(stringbuffer, i);
 				}
 			}
 
@@ -1684,12 +1685,12 @@ public class ERXPropertyListSerialization {
                         throw new IllegalArgumentException(
                                 "JSON Property list generation failed while attempting to write hashtable. Non-String key found in Hashtable. Property list dictionaries must have String's as keys.");
                     if (!suppressWhitespace) {
-                        this._appendNewLineToStringBuffer(stringbuffer, i);
-                        this._appendIndentationToStringBuffer(stringbuffer, i + 1);
+                        _appendNewLineToStringBuffer(stringbuffer, i);
+                        _appendIndentationToStringBuffer(stringbuffer, i + 1);
                     }
-                    this._appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
+                    _appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
                     stringbuffer.append(" : ");
-                    this._appendObjectToStringBuffer(nsdictionary.objectForKey(obj), stringbuffer, i + 1, suppressWhitespace);
+                    _appendObjectToStringBuffer(nsdictionary.objectForKey(obj), stringbuffer, i + 1, suppressWhitespace);
 
                     if (iteration.hasMoreElements()) {
                         stringbuffer.append(',');
@@ -1697,8 +1698,8 @@ public class ERXPropertyListSerialization {
                 }
 
                 if (!suppressWhitespace) {
-                    this._appendNewLineToStringBuffer(stringbuffer, i);
-                    this._appendIndentationToStringBuffer(stringbuffer, i);
+                    _appendNewLineToStringBuffer(stringbuffer, i);
+                    _appendIndentationToStringBuffer(stringbuffer, i);
                 }
             }
 
@@ -1717,12 +1718,12 @@ public class ERXPropertyListSerialization {
 
 		private int _readObjectIntoObjectReference(char ac[], int index, Object aobj[]) {
 			int aBufferIndex = index;
-			aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+			aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 			if (aBufferIndex == EOT || aBufferIndex >= ac.length)
 				aobj[0] = null;
 			else if (ac[aBufferIndex] == '"') {
 				StringBuffer buffer = new StringBuffer(64);
-				aBufferIndex = this._readQuotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
+				aBufferIndex = _readQuotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
 				aobj[0] = buffer.toString();
 				// // detect date strings
 				// String theString = buffer.toString();
@@ -1742,19 +1743,19 @@ public class ERXPropertyListSerialization {
 				// }
 			} else if (ac[aBufferIndex] == '<') {
 				NSMutableData data = new NSMutableData(_lengthOfData(ac, aBufferIndex));
-				aBufferIndex = this._readDataContentsIntoData(ac, aBufferIndex, data);
+				aBufferIndex = _readDataContentsIntoData(ac, aBufferIndex, data);
 				aobj[0] = data;
 			} else if (ac[aBufferIndex] == '[') {
 				NSMutableArray<Object> array = new NSMutableArray<Object>();
-				aBufferIndex = this._readArrayContentsIntoArray(ac, aBufferIndex, array);
+				aBufferIndex = _readArrayContentsIntoArray(ac, aBufferIndex, array);
 				aobj[0] = array;
 			} else if (ac[aBufferIndex] == '{') {
 				NSMutableDictionary<Object, Object> dictionary = new NSMutableDictionary<Object, Object>();
-				aBufferIndex = this._readDictionaryContentsIntoDictionary(ac, aBufferIndex, dictionary);
+				aBufferIndex = _readDictionaryContentsIntoDictionary(ac, aBufferIndex, dictionary);
 				aobj[0] = dictionary;
 			} else {
 				StringBuffer buffer = new StringBuffer(64);
-				aBufferIndex = this._readUnquotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
+				aBufferIndex = _readUnquotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
 				String theString = buffer.toString();
 				if ("true".equals(theString)) {
 					aobj[0] = Boolean.TRUE;
@@ -1795,7 +1796,7 @@ public class ERXPropertyListSerialization {
 
 		private int _readQuotedStringIntoStringBuffer(char ac[], int index, StringBuffer stringbuffer) {
 			int aBufferIndex = index;
-			this._saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
+			_saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
 			int j = ++aBufferIndex;
 			while (aBufferIndex < ac.length && ac[aBufferIndex] != '"')
 				if (ac[aBufferIndex] == '\\') {
@@ -1832,13 +1833,13 @@ public class ERXPropertyListSerialization {
 									"Property list parsing failed while attempting to read quoted string. Input exhausted before escape sequence was completed. Opening quote was at "
 											+ _savedIndexesAsString() + ".");
 						aBufferIndex++;
-						if (!this._isHexDigit(ac[aBufferIndex]) || !this._isHexDigit(ac[aBufferIndex + 1]) || !this._isHexDigit(ac[aBufferIndex + 2]) || !this._isHexDigit(ac[aBufferIndex + 3]))
+						if (!_isHexDigit(ac[aBufferIndex]) || !_isHexDigit(ac[aBufferIndex + 1]) || !_isHexDigit(ac[aBufferIndex + 2]) || !_isHexDigit(ac[aBufferIndex + 3]))
 							throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read quoted string. Improperly formed \\U type escape sequence. At line number: "
 									+ _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-						byte byte0 = this._nibbleForHexDigit(ac[aBufferIndex]);
-						byte byte1 = this._nibbleForHexDigit(ac[aBufferIndex + 1]);
-						byte byte2 = this._nibbleForHexDigit(ac[aBufferIndex + 2]);
-						byte byte3 = this._nibbleForHexDigit(ac[aBufferIndex + 3]);
+						byte byte0 = _nibbleForHexDigit(ac[aBufferIndex]);
+						byte byte1 = _nibbleForHexDigit(ac[aBufferIndex + 1]);
+						byte byte2 = _nibbleForHexDigit(ac[aBufferIndex + 2]);
+						byte byte3 = _nibbleForHexDigit(ac[aBufferIndex + 3]);
 						stringbuffer.append((char) ((byte0 << 12) + (byte1 << 8) + (byte2 << 4) + byte3));
 						aBufferIndex += 4;
 					} else if (ac[aBufferIndex] >= '0' && ac[aBufferIndex] <= '7') {
@@ -1858,7 +1859,7 @@ public class ERXPropertyListSerialization {
 							k += ai[i1];
 						}
 
-						stringbuffer.append(this._nsToUnicode(k));
+						stringbuffer.append(_nsToUnicode(k));
 					} else {
 						stringbuffer.append(ac[aBufferIndex]);
 						if (ac[aBufferIndex] == '\n') {
@@ -1888,7 +1889,7 @@ public class ERXPropertyListSerialization {
 			int aBufferIndex = index;
 			int j = 0;
 			boolean isHexDigit;
-			for (aBufferIndex++; aBufferIndex < ac.length && ((isHexDigit = this._isHexDigit(ac[aBufferIndex])) || this._isWhitespace(ac[aBufferIndex])); aBufferIndex++)
+			for (aBufferIndex++; aBufferIndex < ac.length && ((isHexDigit = _isHexDigit(ac[aBufferIndex])) || _isWhitespace(ac[aBufferIndex])); aBufferIndex++)
 				if (isHexDigit)
 					j++;
 
@@ -1913,10 +1914,10 @@ public class ERXPropertyListSerialization {
 				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (ac[aBufferIndex] == '>')
 					break;
-				byte byte0 = this._nibbleForHexDigit(ac[aBufferIndex]);
+				byte byte0 = _nibbleForHexDigit(ac[aBufferIndex]);
 				aBufferIndex++;
 				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
-				byte byte1 = this._nibbleForHexDigit(ac[aBufferIndex]);
+				byte byte1 = _nibbleForHexDigit(ac[aBufferIndex]);
 				aBufferIndex++;
 				nsmutabledata.appendByte((byte) ((byte0 << 4) + byte1));
 			} while (true);
@@ -1928,7 +1929,7 @@ public class ERXPropertyListSerialization {
 			Object aobj[] = new Object[1];
 			aBufferIndex++;
 			nsmutablearray.removeAllObjects();
-			aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+			aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 			do {
 				if (aBufferIndex == EOT || ac[aBufferIndex] == ']') {
 					break;
@@ -1939,7 +1940,7 @@ public class ERXPropertyListSerialization {
 								+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 					}
 					aBufferIndex++;
-					aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+					aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 					if (aBufferIndex == EOT) {
 						throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read array. Input exhausted before end of array was found. At line number: "
 								+ _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
@@ -1947,11 +1948,11 @@ public class ERXPropertyListSerialization {
 				}
 				if (ac[aBufferIndex] != ']') {
 					aobj[0] = null;
-					aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj);
+					aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj);
 					if (aobj[0] == null)
 						throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read array. Failed to read content object. At line number: " + _lineNumber
 								+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-					aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+					aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 					nsmutablearray.addObject(aobj[0]);
 				}
 			} while (true);
@@ -1971,12 +1972,12 @@ public class ERXPropertyListSerialization {
 				for (Enumeration<?> enumeration = nsmutabledictionary.keyEnumerator(); enumeration.hasMoreElements(); nsmutabledictionary.removeObjectForKey(enumeration.nextElement())) {/**/}
 			}
 
-			for (aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex); aBufferIndex != EOT && ac[aBufferIndex] != '}';) {
-				aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj); // key
+			for (aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex); aBufferIndex != EOT && ac[aBufferIndex] != '}';) {
+				aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj); // key
 				if (aobj[0] == null || !(aobj[0] instanceof String))
 					throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read dictionary. Failed to read key or key is not a String. At line number: "
 							+ _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT || ac[aBufferIndex] != ':') {
 					logger.info("Exception for key=" + aobj[0] + " with unparsed values=" + new StringBuilder().append(ac, aBufferIndex, ac.length - aBufferIndex));
 
@@ -1984,16 +1985,16 @@ public class ERXPropertyListSerialization {
 							+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".  Parsed '" + ac[aBufferIndex] + "' instead.");
 				}
 				aBufferIndex++;
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT) {
 					throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read dictionary. Encountered unexpected end of file while reading key " + aobj[0]
 							+ " with no value. At line number: " + _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 				}
-				aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj1); // value
+				aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj1); // value
 				if (aobj1[0] == null)
 					throw new IllegalArgumentException("JSON Property list parsing failed while attempting to read dictionary. Failed to read value. At line number: " + _lineNumber + ", column: "
 							+ (aBufferIndex - _startOfLineCharIndex) + ".");
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT) {
 					throw new IllegalArgumentException("Unexpected end of JSON string");
 				}
@@ -2005,7 +2006,7 @@ public class ERXPropertyListSerialization {
 				}
 
 				aBufferIndex++;
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				nsmutabledictionary.setObjectForKey(aobj1[0], aobj[0]);
 			}
 
@@ -2024,7 +2025,7 @@ public class ERXPropertyListSerialization {
 		private int _checkForWhitespaceOrComment(char ac[], int index) {
 			if (index == EOT || index >= ac.length)
 				return _C_NON_COMMENT_OR_SPACE;
-			if (this._isWhitespace(ac[index]))
+			if (_isWhitespace(ac[index]))
 				return _C_WHITESPACE;
 			if (index + 1 < ac.length) {
 				if (ac[index] == '/' && ac[index + 1] == '/')
@@ -2037,18 +2038,18 @@ public class ERXPropertyListSerialization {
 
 		private int _skipWhitespaceAndComments(char ac[], int index) {
 			int aBufferIndex = index;
-			for (int j = this._checkForWhitespaceOrComment(ac, aBufferIndex); j != _C_NON_COMMENT_OR_SPACE; j = this._checkForWhitespaceOrComment(ac, aBufferIndex)) {
+			for (int j = _checkForWhitespaceOrComment(ac, aBufferIndex); j != _C_NON_COMMENT_OR_SPACE; j = _checkForWhitespaceOrComment(ac, aBufferIndex)) {
 				switch (j) {
 					case _C_WHITESPACE: // '\002'
-						aBufferIndex = this._processWhitespace(ac, aBufferIndex);
+						aBufferIndex = _processWhitespace(ac, aBufferIndex);
 						break;
 
 					case _C_SINGLE_LINE_COMMENT: // '\003'
-						aBufferIndex = this._processSingleLineComment(ac, aBufferIndex);
+						aBufferIndex = _processSingleLineComment(ac, aBufferIndex);
 						break;
 
 					case _C_MULTI_LINE_COMMENT: // '\004'
-						aBufferIndex = this._processMultiLineComment(ac, aBufferIndex);
+						aBufferIndex = _processMultiLineComment(ac, aBufferIndex);
 						break;
 				}
 			}
@@ -2057,7 +2058,7 @@ public class ERXPropertyListSerialization {
 
 		private int _processWhitespace(char ac[], int index) {
 			int aBufferIndex = index;
-			for (; aBufferIndex < ac.length && this._isWhitespace(ac[aBufferIndex]); aBufferIndex++) {
+			for (; aBufferIndex < ac.length && _isWhitespace(ac[aBufferIndex]); aBufferIndex++) {
 				if (ac[aBufferIndex] == '\n') {
 					_lineNumber++;
 					_startOfLineCharIndex = aBufferIndex + 1;
@@ -2074,7 +2075,7 @@ public class ERXPropertyListSerialization {
 
 		private int _processMultiLineComment(char ac[], int index) {
 			int aBufferIndex = index;
-			this._saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
+			_saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
 			for (aBufferIndex += 2; aBufferIndex + 1 < ac.length && (ac[aBufferIndex] != '*' || ac[aBufferIndex + 1] != '/'); aBufferIndex++) {
 				if (ac[aBufferIndex] == '/' && ac[aBufferIndex + 1] == '*') {
 					throw new IllegalArgumentException("JSON Property list parsing does not support embedded multi line comments.The first opening comment was at " + _savedIndexesAsString()
@@ -2357,7 +2358,7 @@ public class ERXPropertyListSerialization {
 			if (obj instanceof String)
 				return obj;
 			if (obj instanceof StringBuffer)
-				return new String((StringBuffer) obj);
+				return ((StringBuffer) obj).toString();
 			if (obj instanceof NSData)
 				return ((NSData) obj).clone();
 			if (obj instanceof NSArray<?>) {
@@ -2392,7 +2393,7 @@ public class ERXPropertyListSerialization {
 			if (plist == null)
 				return null;
 			StringBuffer buffer = new StringBuffer(128);
-			this._appendObjectToStringBuffer(plist, buffer, 0);
+			_appendObjectToStringBuffer(plist, buffer, 0);
 			return buffer.toString();
 		}
 
@@ -2409,8 +2410,8 @@ public class ERXPropertyListSerialization {
 				_startOfLineCharIndex = 0;
 				aobj[0] = null;
 				int i = 0;
-				i = this._readObjectIntoObjectReference(charArray, i, aobj);
-				i = this._skipWhitespaceAndComments(charArray, i);
+				i = _readObjectIntoObjectReference(charArray, i, aobj);
+				i = _skipWhitespaceAndComments(charArray, i);
 				if (i != EOT) {
 					throw new IllegalArgumentException(
 							"parseStringIntoPlist parsed an object, but there's still more text in the string. A plist should contain only one top-level object. Line number: " + _lineNumber
@@ -2428,8 +2429,8 @@ public class ERXPropertyListSerialization {
 					_startOfLineCharIndex = 0;
 					aobj[0] = null;
 					int i = 0;
-					i = this._readObjectIntoObjectReference(charArray, i, aobj);
-					i = this._skipWhitespaceAndComments(charArray, i);
+					i = _readObjectIntoObjectReference(charArray, i, aobj);
+					i = _skipWhitespaceAndComments(charArray, i);
 					if (i != EOT) {
 						throw new IllegalArgumentException(
 								"parseStringIntoPlist parsed an object, but there's still more text in the string. A plist should contain only one top-level object. Line number: " + _lineNumber
@@ -2449,8 +2450,8 @@ public class ERXPropertyListSerialization {
 					_startOfLineCharIndex = 0;
 					aobj[0] = null;
 					int i = 0;
-					i = this._readObjectIntoObjectReference(charArray, i, aobj);
-					i = this._skipWhitespaceAndComments(charArray, i);
+					i = _readObjectIntoObjectReference(charArray, i, aobj);
+					i = _skipWhitespaceAndComments(charArray, i);
 					if (i != EOT) {
 						throw new IllegalArgumentException(
 								"parseStringIntoPlist parsed an object, but there's still more text in the string. A plist should contain only one top-level object. Line number: " + _lineNumber
@@ -2536,10 +2537,10 @@ public class ERXPropertyListSerialization {
 					byte byte3 = (byte) (c & 0xf);
 					c >>= '\004';
 					stringbuffer.append("\\U");
-					stringbuffer.append(this._hexDigitForNibble(byte3));
-					stringbuffer.append(this._hexDigitForNibble(byte2));
-					stringbuffer.append(this._hexDigitForNibble(byte1));
-					stringbuffer.append(this._hexDigitForNibble(byte0));
+					stringbuffer.append(_hexDigitForNibble(byte3));
+					stringbuffer.append(_hexDigitForNibble(byte2));
+					stringbuffer.append(_hexDigitForNibble(byte1));
+					stringbuffer.append(_hexDigitForNibble(byte0));
 				}
 			}
 			stringbuffer.append('"');
@@ -2553,8 +2554,8 @@ public class ERXPropertyListSerialization {
 				byte byte1 = (byte) (byte0 & 0xf);
 				byte0 >>= 4;
 				byte byte2 = (byte) (byte0 & 0xf);
-				stringbuffer.append(this._hexDigitForNibble(byte2));
-				stringbuffer.append(this._hexDigitForNibble(byte1));
+				stringbuffer.append(_hexDigitForNibble(byte2));
+				stringbuffer.append(_hexDigitForNibble(byte1));
 			}
 
 			stringbuffer.append('>');
@@ -2567,13 +2568,13 @@ public class ERXPropertyListSerialization {
 				for (int k = 0; k < j; k++) {
 					if (k > 0)
 						stringbuffer.append(',');
-					this._appendNewLineToStringBuffer(stringbuffer, i);
-					this._appendIndentationToStringBuffer(stringbuffer, i + 1);
-					this._appendObjectToStringBuffer(nsarray.get(k), stringbuffer, i + 1);
+					_appendNewLineToStringBuffer(stringbuffer, i);
+					_appendIndentationToStringBuffer(stringbuffer, i + 1);
+					_appendObjectToStringBuffer(nsarray.get(k), stringbuffer, i + 1);
 				}
 
-				this._appendNewLineToStringBuffer(stringbuffer, i);
-				this._appendIndentationToStringBuffer(stringbuffer, i);
+				_appendNewLineToStringBuffer(stringbuffer, i);
+				_appendIndentationToStringBuffer(stringbuffer, i);
 			}
 			stringbuffer.append(')');
 		}
@@ -2585,13 +2586,13 @@ public class ERXPropertyListSerialization {
                 for (int k = 0; k < j; k++) {
                     if (k > 0)
                         stringbuffer.append(',');
-                    this._appendNewLineToStringBuffer(stringbuffer, i);
-                    this._appendIndentationToStringBuffer(stringbuffer, i + 1);
-                    this._appendObjectToStringBuffer(nsarray.objectAtIndex(k), stringbuffer, i + 1);
+                    _appendNewLineToStringBuffer(stringbuffer, i);
+                    _appendIndentationToStringBuffer(stringbuffer, i + 1);
+                    _appendObjectToStringBuffer(nsarray.objectAtIndex(k), stringbuffer, i + 1);
                 }
 
-                this._appendNewLineToStringBuffer(stringbuffer, i);
-                this._appendIndentationToStringBuffer(stringbuffer, i);
+                _appendNewLineToStringBuffer(stringbuffer, i);
+                _appendIndentationToStringBuffer(stringbuffer, i);
             }
             stringbuffer.append(')');
         }
@@ -2605,15 +2606,15 @@ public class ERXPropertyListSerialization {
 					if (!(obj instanceof String))
 						throw new IllegalArgumentException(
 								"Property list generation failed while attempting to write hashtable. Non-String key found in Hashtable. Property list dictionaries must have String's as keys.");
-					this._appendNewLineToStringBuffer(stringbuffer, i);
-					this._appendIndentationToStringBuffer(stringbuffer, i + 1);
-					this._appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
+					_appendNewLineToStringBuffer(stringbuffer, i);
+					_appendIndentationToStringBuffer(stringbuffer, i + 1);
+					_appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
 					stringbuffer.append(" = ");
-					this._appendObjectToStringBuffer(nsdictionary.get(obj), stringbuffer, i + 1);
+					_appendObjectToStringBuffer(nsdictionary.get(obj), stringbuffer, i + 1);
 				}
 
-				this._appendNewLineToStringBuffer(stringbuffer, i);
-				this._appendIndentationToStringBuffer(stringbuffer, i);
+				_appendNewLineToStringBuffer(stringbuffer, i);
+				_appendIndentationToStringBuffer(stringbuffer, i);
 			}
 			stringbuffer.append('}');
 		}
@@ -2627,15 +2628,15 @@ public class ERXPropertyListSerialization {
                     if (!(obj instanceof String))
                         throw new IllegalArgumentException(
                                 "Property list generation failed while attempting to write hashtable. Non-String key found in Hashtable. Property list dictionaries must have String's as keys.");
-                    this._appendNewLineToStringBuffer(stringbuffer, i);
-                    this._appendIndentationToStringBuffer(stringbuffer, i + 1);
-                    this._appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
+                    _appendNewLineToStringBuffer(stringbuffer, i);
+                    _appendIndentationToStringBuffer(stringbuffer, i + 1);
+                    _appendStringToStringBuffer((String) obj, stringbuffer, i + 1);
                     stringbuffer.append(" = ");
-                    this._appendObjectToStringBuffer(nsdictionary.objectForKey(obj), stringbuffer, i + 1);
+                    _appendObjectToStringBuffer(nsdictionary.objectForKey(obj), stringbuffer, i + 1);
                 }
 
-                this._appendNewLineToStringBuffer(stringbuffer, i);
-                this._appendIndentationToStringBuffer(stringbuffer, i);
+                _appendNewLineToStringBuffer(stringbuffer, i);
+                _appendIndentationToStringBuffer(stringbuffer, i);
             }
             stringbuffer.append('}');
         }
@@ -2652,28 +2653,28 @@ public class ERXPropertyListSerialization {
 
 		private int _readObjectIntoObjectReference(char ac[], int index, Object aobj[]) {
 			int aBufferIndex = index;
-			aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+			aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 			if (aBufferIndex == EOT || aBufferIndex >= ac.length)
 				aobj[0] = null;
 			else if (ac[aBufferIndex] == '"') {
 				StringBuffer buffer = new StringBuffer(64);
-				aBufferIndex = this._readQuotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
+				aBufferIndex = _readQuotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
 				aobj[0] = buffer.toString();
 			} else if (ac[aBufferIndex] == '<') {
 				NSMutableData data = new NSMutableData(_lengthOfData(ac, aBufferIndex));
-				aBufferIndex = this._readDataContentsIntoData(ac, aBufferIndex, data);
+				aBufferIndex = _readDataContentsIntoData(ac, aBufferIndex, data);
 				aobj[0] = data;
 			} else if (ac[aBufferIndex] == '(') {
 				NSMutableArray<Object> array = new NSMutableArray<Object>();
-				aBufferIndex = this._readArrayContentsIntoArray(ac, aBufferIndex, array);
+				aBufferIndex = _readArrayContentsIntoArray(ac, aBufferIndex, array);
 				aobj[0] = array;
 			} else if (ac[aBufferIndex] == '{') {
 				NSMutableDictionary<Object, Object> dictionary = new NSMutableDictionary<Object, Object>();
-				aBufferIndex = this._readDictionaryContentsIntoDictionary(ac, aBufferIndex, dictionary);
+				aBufferIndex = _readDictionaryContentsIntoDictionary(ac, aBufferIndex, dictionary);
 				aobj[0] = dictionary;
 			} else {
 				StringBuffer buffer = new StringBuffer(64);
-				aBufferIndex = this._readUnquotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
+				aBufferIndex = _readUnquotedStringIntoStringBuffer(ac, aBufferIndex, buffer);
 				aobj[0] = buffer.toString();
 			}
 			return aBufferIndex < ac.length ? aBufferIndex : EOT;
@@ -2696,7 +2697,7 @@ public class ERXPropertyListSerialization {
 
 		private int _readQuotedStringIntoStringBuffer(char ac[], int index, StringBuffer stringbuffer) {
 			int aBufferIndex = index;
-			this._saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
+			_saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
 			int j = ++aBufferIndex;
 			while (aBufferIndex < ac.length && ac[aBufferIndex] != '"')
 				if (ac[aBufferIndex] == '\\') {
@@ -2732,13 +2733,13 @@ public class ERXPropertyListSerialization {
 									"Property list parsing failed while attempting to read quoted string. Input exhausted before escape sequence was completed. Opening quote was at "
 											+ _savedIndexesAsString() + ".");
 						aBufferIndex++;
-						if (!this._isHexDigit(ac[aBufferIndex]) || !this._isHexDigit(ac[aBufferIndex + 1]) || !this._isHexDigit(ac[aBufferIndex + 2]) || !this._isHexDigit(ac[aBufferIndex + 3]))
+						if (!_isHexDigit(ac[aBufferIndex]) || !_isHexDigit(ac[aBufferIndex + 1]) || !_isHexDigit(ac[aBufferIndex + 2]) || !_isHexDigit(ac[aBufferIndex + 3]))
 							throw new IllegalArgumentException("Property list parsing failed while attempting to read quoted string. Improperly formed \\U type escape sequence. At line number: "
 									+ _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-						byte byte0 = this._nibbleForHexDigit(ac[aBufferIndex]);
-						byte byte1 = this._nibbleForHexDigit(ac[aBufferIndex + 1]);
-						byte byte2 = this._nibbleForHexDigit(ac[aBufferIndex + 2]);
-						byte byte3 = this._nibbleForHexDigit(ac[aBufferIndex + 3]);
+						byte byte0 = _nibbleForHexDigit(ac[aBufferIndex]);
+						byte byte1 = _nibbleForHexDigit(ac[aBufferIndex + 1]);
+						byte byte2 = _nibbleForHexDigit(ac[aBufferIndex + 2]);
+						byte byte3 = _nibbleForHexDigit(ac[aBufferIndex + 3]);
 						stringbuffer.append((char) ((byte0 << 12) + (byte1 << 8) + (byte2 << 4) + byte3));
 						aBufferIndex += 4;
 					} else if (ac[aBufferIndex] >= '0' && ac[aBufferIndex] <= '7') {
@@ -2758,7 +2759,7 @@ public class ERXPropertyListSerialization {
 							k += ai[i1];
 						}
 
-						stringbuffer.append(this._nsToUnicode(k));
+						stringbuffer.append(_nsToUnicode(k));
 					} else {
 						stringbuffer.append(ac[aBufferIndex]);
 						if (ac[aBufferIndex] == '\n') {
@@ -2788,7 +2789,7 @@ public class ERXPropertyListSerialization {
 			int aBufferIndex = index;
 			int j = 0;
 			boolean isHexDigit;
-			for (aBufferIndex++; aBufferIndex < ac.length && ((isHexDigit = this._isHexDigit(ac[aBufferIndex])) || this._isWhitespace(ac[aBufferIndex])); aBufferIndex++)
+			for (aBufferIndex++; aBufferIndex < ac.length && ((isHexDigit = _isHexDigit(ac[aBufferIndex])) || _isWhitespace(ac[aBufferIndex])); aBufferIndex++)
 				if (isHexDigit)
 					j++;
 
@@ -2813,10 +2814,10 @@ public class ERXPropertyListSerialization {
 				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (ac[aBufferIndex] == '>')
 					break;
-				byte byte0 = this._nibbleForHexDigit(ac[aBufferIndex]);
+				byte byte0 = _nibbleForHexDigit(ac[aBufferIndex]);
 				aBufferIndex++;
 				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
-				byte byte1 = this._nibbleForHexDigit(ac[aBufferIndex]);
+				byte byte1 = _nibbleForHexDigit(ac[aBufferIndex]);
 				aBufferIndex++;
 				nsmutabledata.appendByte((byte) ((byte0 << 4) + byte1));
 			} while (true);
@@ -2828,7 +2829,7 @@ public class ERXPropertyListSerialization {
 			Object aobj[] = new Object[1];
 			aBufferIndex++;
 			nsmutablearray.removeAllObjects();
-			aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+			aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 			do {
 				if (aBufferIndex == EOT || ac[aBufferIndex] == ')')
 					break;
@@ -2837,18 +2838,18 @@ public class ERXPropertyListSerialization {
 						throw new IllegalArgumentException("Property list parsing failed while attempting to read array. No comma found between array elements. At line number: " + _lineNumber
 								+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 					aBufferIndex++;
-					aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+					aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 					if (aBufferIndex == EOT)
 						throw new IllegalArgumentException("Property list parsing failed while attempting to read array. Input exhausted before end of array was found. At line number: " + _lineNumber
 								+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 				}
 				if (ac[aBufferIndex] != ')') {
 					aobj[0] = null;
-					aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj);
+					aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj);
 					if (aobj[0] == null)
 						throw new IllegalArgumentException("Property list parsing failed while attempting to read array. Failed to read content object. At line number: " + _lineNumber + ", column: "
 								+ (aBufferIndex - _startOfLineCharIndex) + ".");
-					aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+					aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 					nsmutablearray.addObject(aobj[0]);
 				}
 			} while (true);
@@ -2867,30 +2868,30 @@ public class ERXPropertyListSerialization {
 			if (nsmutabledictionary.count() != 0) {
 				for (Enumeration<?> enumeration = nsmutabledictionary.keyEnumerator(); enumeration.hasMoreElements(); nsmutabledictionary.removeObjectForKey(enumeration.nextElement())) {/**/}
 			}
-			for (aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex); aBufferIndex != EOT && ac[aBufferIndex] != '}';) {
-				aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj);
+			for (aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex); aBufferIndex != EOT && ac[aBufferIndex] != '}';) {
+				aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj);
 				if (aobj[0] == null || !(aobj[0] instanceof String))
 					throw new IllegalArgumentException("Property list parsing failed while attempting to read dictionary. Failed to read key or key is not a String. At line number: " + _lineNumber
 							+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT || ac[aBufferIndex] != '=')
 					throw new IllegalArgumentException("Property list parsing failed while attempting to read dictionary. Read key " + aobj[0] + " with no value. At line number: " + _lineNumber
 							+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 				aBufferIndex++;
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT)
 					throw new IllegalArgumentException("Property list parsing failed while attempting to read dictionary. Read key " + aobj[0] + " with no value. At line number: " + _lineNumber
 							+ ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
-				aBufferIndex = this._readObjectIntoObjectReference(ac, aBufferIndex, aobj1);
+				aBufferIndex = _readObjectIntoObjectReference(ac, aBufferIndex, aobj1);
 				if (aobj1[0] == null)
 					throw new IllegalArgumentException("Property list parsing failed while attempting to read dictionary. Failed to read value. At line number: " + _lineNumber + ", column: "
 							+ (aBufferIndex - _startOfLineCharIndex) + ".");
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				if (aBufferIndex == EOT || ac[aBufferIndex] != ';')
 					throw new IllegalArgumentException("Property list parsing failed while attempting to read dictionary. Read key and value with no terminating semicolon. At line number: "
 							+ _lineNumber + ", column: " + (aBufferIndex - _startOfLineCharIndex) + ".");
 				aBufferIndex++;
-				aBufferIndex = this._skipWhitespaceAndComments(ac, aBufferIndex);
+				aBufferIndex = _skipWhitespaceAndComments(ac, aBufferIndex);
 				nsmutabledictionary.setObjectForKey(aobj1[0], aobj[0]);
 			}
 
@@ -2904,7 +2905,7 @@ public class ERXPropertyListSerialization {
 		private int _checkForWhitespaceOrComment(char ac[], int index) {
 			if (index == EOT || index >= ac.length)
 				return _C_NON_COMMENT_OR_SPACE;
-			if (this._isWhitespace(ac[index]))
+			if (_isWhitespace(ac[index]))
 				return _C_WHITESPACE;
 			if (index + 1 < ac.length) {
 				if (ac[index] == '/' && ac[index + 1] == '/')
@@ -2917,18 +2918,18 @@ public class ERXPropertyListSerialization {
 
 		private int _skipWhitespaceAndComments(char ac[], int index) {
 			int aBufferIndex = index;
-			for (int j = this._checkForWhitespaceOrComment(ac, aBufferIndex); j != _C_NON_COMMENT_OR_SPACE; j = this._checkForWhitespaceOrComment(ac, aBufferIndex)) {
+			for (int j = _checkForWhitespaceOrComment(ac, aBufferIndex); j != _C_NON_COMMENT_OR_SPACE; j = _checkForWhitespaceOrComment(ac, aBufferIndex)) {
 				switch (j) {
 					case _C_WHITESPACE: // '\002'
-						aBufferIndex = this._processWhitespace(ac, aBufferIndex);
+						aBufferIndex = _processWhitespace(ac, aBufferIndex);
 						break;
 
 					case _C_SINGLE_LINE_COMMENT: // '\003'
-						aBufferIndex = this._processSingleLineComment(ac, aBufferIndex);
+						aBufferIndex = _processSingleLineComment(ac, aBufferIndex);
 						break;
 
 					case _C_MULTI_LINE_COMMENT: // '\004'
-						aBufferIndex = this._processMultiLineComment(ac, aBufferIndex);
+						aBufferIndex = _processMultiLineComment(ac, aBufferIndex);
 						break;
 				}
 			}
@@ -2937,7 +2938,7 @@ public class ERXPropertyListSerialization {
 
 		private int _processWhitespace(char ac[], int index) {
 			int aBufferIndex = index;
-			for (; aBufferIndex < ac.length && this._isWhitespace(ac[aBufferIndex]); aBufferIndex++) {
+			for (; aBufferIndex < ac.length && _isWhitespace(ac[aBufferIndex]); aBufferIndex++) {
 				if (ac[aBufferIndex] == '\n') {
 					_lineNumber++;
 					_startOfLineCharIndex = aBufferIndex + 1;
@@ -2954,7 +2955,7 @@ public class ERXPropertyListSerialization {
 
 		private int _processMultiLineComment(char ac[], int index) {
 			int aBufferIndex = index;
-			this._saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
+			_saveIndexes(aBufferIndex, _lineNumber, _startOfLineCharIndex);
 			for (aBufferIndex += 2; aBufferIndex + 1 < ac.length && (ac[aBufferIndex] != '*' || ac[aBufferIndex + 1] != '/'); aBufferIndex++) {
 				if (ac[aBufferIndex] == '/' && ac[aBufferIndex + 1] == '*') {
 					throw new IllegalArgumentException("Property list parsing does not support embedded multi line comments.The first opening comment was at " + _savedIndexesAsString()
@@ -3440,12 +3441,12 @@ public class ERXPropertyListSerialization {
 
 			@Override
 			public String toString() {
-				return this.toString(2);
+				return toString(2);
 			}
 
 			public String toString(int objectRefSize) {
 				NSMutableData data = new NSMutableData(1024);
-				this.appendToData(data, objectRefSize);
+				appendToData(data, objectRefSize);
 				return "[" + data.length() + "] " + data._hexString();
 			}
 
@@ -3727,23 +3728,23 @@ public class ERXPropertyListSerialization {
 			PListType type = typeForObject(object);
 			switch (type) {
 				case STRING: {
-					objectList.add(new EncodedObject(this.encodeString((String) object)));
+					objectList.add(new EncodedObject(encodeString((String) object)));
 					break;
 				}
 				case INTEGER: {
-					objectList.add(new EncodedObject(this.encodeInt(((Number) object).longValue())));
+					objectList.add(new EncodedObject(encodeInt(((Number) object).longValue())));
 					break;
 				}
 				case FLOAT: {
-					objectList.add(new EncodedObject(this.encodeReal(((Number) object).doubleValue())));
+					objectList.add(new EncodedObject(encodeReal(((Number) object).doubleValue())));
 					break;
 				}
 				case DATE: {
-					objectList.add(new EncodedObject(this.encodeDate((Date) object)));
+					objectList.add(new EncodedObject(encodeDate((Date) object)));
 					break;
 				}
 				case BOOLEAN: {
-					objectList.add(new EncodedObject(this.encodeBoolean(((Boolean) object).booleanValue())));
+					objectList.add(new EncodedObject(encodeBoolean(((Boolean) object).booleanValue())));
 					break;
 				}
 				case DATA: {
@@ -3753,7 +3754,7 @@ public class ERXPropertyListSerialization {
 					} else {
 						theBytes = (byte[]) object;
 					}
-					objectList.add(new EncodedObject(this.encodeData(theBytes)));
+					objectList.add(new EncodedObject(encodeData(theBytes)));
 					break;
 				}
 				case DICTIONARY: {
@@ -3762,13 +3763,13 @@ public class ERXPropertyListSerialization {
     
     					// 1. append dictionary markers here which includes the count
     					int count = dict.size();
-    					EncodedDictionary dictionary = new EncodedDictionary(this.encodeCount(count, Type.kCFBinaryPlistMarkerDict));
+    					EncodedDictionary dictionary = new EncodedDictionary(encodeCount(count, Type.kCFBinaryPlistMarkerDict));
     					objectList.add(dictionary);
     
     					// 2. write keys and values
     					for (Object aKey : dict.keySet()) {
-    						dictionary.addKeyRef(this.encodeObject(aKey, objectList, uniquingTable));
-    						dictionary.addValueRef(this.encodeObject(dict.get(aKey), objectList, uniquingTable));
+    						dictionary.addKeyRef(encodeObject(aKey, objectList, uniquingTable));
+    						dictionary.addValueRef(encodeObject(dict.get(aKey), objectList, uniquingTable));
     					}
 				    }
 				    else {
@@ -3776,14 +3777,14 @@ public class ERXPropertyListSerialization {
                         
                         // 1. append dictionary markers here which includes the count
                         int count = dict.count();
-                        EncodedDictionary dictionary = new EncodedDictionary(this.encodeCount(count, Type.kCFBinaryPlistMarkerDict));
+                        EncodedDictionary dictionary = new EncodedDictionary(encodeCount(count, Type.kCFBinaryPlistMarkerDict));
                         objectList.add(dictionary);
     
                         // 2. write keys and values
                         for (Enumeration keyEnum = dict.keyEnumerator(); keyEnum.hasMoreElements(); ) {
                             Object aKey = keyEnum.nextElement();
-                            dictionary.addKeyRef(this.encodeObject(aKey, objectList, uniquingTable));
-                            dictionary.addValueRef(this.encodeObject(dict.objectForKey(aKey), objectList, uniquingTable));
+                            dictionary.addKeyRef(encodeObject(aKey, objectList, uniquingTable));
+                            dictionary.addValueRef(encodeObject(dict.objectForKey(aKey), objectList, uniquingTable));
                         }
 				    }
 					break;
@@ -3793,25 +3794,25 @@ public class ERXPropertyListSerialization {
     					// 1. append array markers here
     					List<?> list = (List<?>) object;
     					int count = list.size();
-    					EncodedArray array = new EncodedArray(this.encodeCount(count, Type.kCFBinaryPlistMarkerArray));
+    					EncodedArray array = new EncodedArray(encodeCount(count, Type.kCFBinaryPlistMarkerArray));
     					objectList.add(array);
     
     					// 2. write all values
     					for (Object aValue : list) {
-    						array.addValueRef(this.encodeObject(aValue, objectList, uniquingTable));
+    						array.addValueRef(encodeObject(aValue, objectList, uniquingTable));
     					}
 				    }
 				    else {
                         // 1. append array markers here
                         NSArray list = (NSArray) object;
                         int count = list.count();
-                        EncodedArray array = new EncodedArray(this.encodeCount(count, Type.kCFBinaryPlistMarkerArray));
+                        EncodedArray array = new EncodedArray(encodeCount(count, Type.kCFBinaryPlistMarkerArray));
                         objectList.add(array);
     
                         // 2. write all values
                         for (Enumeration valuesEnum = list.objectEnumerator(); valuesEnum.hasMoreElements(); ) {
                             Object aValue = valuesEnum.nextElement();
-                            array.addValueRef(this.encodeObject(aValue, objectList, uniquingTable));
+                            array.addValueRef(encodeObject(aValue, objectList, uniquingTable));
                         }
 				    }
 					break;
@@ -3821,43 +3822,43 @@ public class ERXPropertyListSerialization {
     					// 1. append set markers here
     					List<?> list = (List<?>) object;
     					int count = list.size();
-    					EncodedSet set = new EncodedSet(this.encodeCount(count, Type.kCFBinaryPlistMarkerSet));
+    					EncodedSet set = new EncodedSet(encodeCount(count, Type.kCFBinaryPlistMarkerSet));
     					objectList.add(set);
     
     					// 2. write all values
     					for (Object aValue : list) {
-    						set.addValueRef(this.encodeObject(aValue, objectList, uniquingTable));
+    						set.addValueRef(encodeObject(aValue, objectList, uniquingTable));
     					}
 				    }
 				    else {
                         // 1. append set markers here
                         NSArray list = (NSArray) object;
                         int count = list.count();
-                        EncodedSet set = new EncodedSet(this.encodeCount(count, Type.kCFBinaryPlistMarkerSet));
+                        EncodedSet set = new EncodedSet(encodeCount(count, Type.kCFBinaryPlistMarkerSet));
                         objectList.add(set);
     
                         // 2. write all values
                         for (Enumeration valuesEnum = list.objectEnumerator(); valuesEnum.hasMoreElements(); ) {
                             Object aValue = valuesEnum.nextElement();
-                            set.addValueRef(this.encodeObject(aValue, objectList, uniquingTable));
+                            set.addValueRef(encodeObject(aValue, objectList, uniquingTable));
                         }
 				    }
 					break;
 				}
 				case NULL: {
-					objectList.add(new EncodedObject(this.encodeNull()));
+					objectList.add(new EncodedObject(encodeNull()));
 					break;
 				}
 				case UUID: {
-					objectList.add(new EncodedObject(this.encodeUUID((UUID) object)));
+					objectList.add(new EncodedObject(encodeUUID((UUID) object)));
 					break;
 				}
 				case FILL: {
-					objectList.add(new EncodedObject(this.encodeFillByte()));
+					objectList.add(new EncodedObject(encodeFillByte()));
 					break;
 				}
 				default: {
-					objectList.add(new EncodedObject(this.encodeString(object.toString())));
+					objectList.add(new EncodedObject(encodeString(object.toString())));
 					break;
 				}
 			}
@@ -3904,7 +3905,7 @@ public class ERXPropertyListSerialization {
 			// flatten plist into object table
 			List<EncodedObject> objectList = new ArrayList<EncodedObject>(512);
 			Map<Object, Long> uniquingTable = new HashMap<Object, Long>(2048);
-			long theTopObject = this.encodeObject(plist, objectList, uniquingTable);
+			long theTopObject = encodeObject(plist, objectList, uniquingTable);
 
 			// determine ref size
 			long numberOfObjects = objectList.size();
@@ -4230,7 +4231,7 @@ public class ERXPropertyListSerialization {
 			// ----------------------
 			objectTable = new ArrayList<Object>((int) numObjects);
 			for (Long index : objectIndexTable) {
-				this.parseObject(theBytes, index.intValue());
+				parseObject(theBytes, index.intValue());
 			}
 
 			return parsed;
@@ -4387,7 +4388,7 @@ public class ERXPropertyListSerialization {
 			 * @return the fixedLength
 			 */
 			public boolean isFixedLength() {
-				return this._fixedLength;
+				return _fixedLength;
 			}
 
 			@Override
@@ -4534,48 +4535,48 @@ public class ERXPropertyListSerialization {
 			switch (typeMarker) {
 				// translates kCFBinaryPlistMarkerNull, kCFBinaryPlistMarkerFalse, kCFBinaryPlistMarkerTrue,kCFBinaryPlistMarkerFill
 				case kCFBinaryPlistMarkerNull: {
-					this.parsePrimitive(bytes, index, marker);
+					parsePrimitive(bytes, index, marker);
 					break;
 				}
 				case kCFBinaryPlistMarkerInt: {
-					this.parseInt(bytes, index, marker);
+					parseInt(bytes, index, marker);
 					break;
 				}
 				case kCFBinaryPlistMarkerReal: {
-					this.parseReal(bytes, index, marker);
+					parseReal(bytes, index, marker);
 					break;
 				}
 					// See CFBinaryPlist.c
 				case kCFBinaryPlistMarkerDate: {
-					this.parseDate(bytes, index, marker);
+					parseDate(bytes, index, marker);
 					break;
 				}
 				case kCFBinaryPlistMarkerData: {
-					this.parseData(bytes, index, (int) count);
+					parseData(bytes, index, (int) count);
 					break;
 				}
 				case kCFBinaryPlistMarkerASCIIString: {
-					this.parseAsciiString(bytes, index, (int) count);
+					parseAsciiString(bytes, index, (int) count);
 					break;
 				}
 				case kCFBinaryPlistMarkerUnicode16String: {
-					this.parseUnicodeString(bytes, index, (int) count);
+					parseUnicodeString(bytes, index, (int) count);
 					break;
 				}
 				case kCFBinaryPlistMarkerUID: {
-					this.parseUUID(bytes, index, marker);
+					parseUUID(bytes, index, marker);
 					break;
 				}
 				case kCFBinaryPlistMarkerArray: {
-					this.parseArray(bytes, index, (int) count);
+					parseArray(bytes, index, (int) count);
 					break;
 				}
 				case kCFBinaryPlistMarkerSet: {
-					this.parseSet(bytes, index, (int) count);
+					parseSet(bytes, index, (int) count);
 					break;
 				}
 				case kCFBinaryPlistMarkerDict: {
-					this.parseDictionary(bytes, index, (int) count);
+					parseDictionary(bytes, index, (int) count);
 					break;
 				}
 				default: {
@@ -4741,9 +4742,9 @@ public class ERXPropertyListSerialization {
 		 * @throws IOException
 		 */
 		private void parseAsciiString(byte[] bytes, int index, int count) throws IOException {
-			String encoding = "UTF-8";
-			if (Charset.isSupported("ASCII")) {
-				encoding = "ASCII";
+			String encoding = CharEncoding.UTF_8;
+			if (Charset.isSupported("ASCII")) { // CHECKME isn't ASCII mandatory for any JVM?
+				encoding = CharEncoding.US_ASCII;
 			}
 			objectTable.add(new String(bytes, index, count, encoding));
 		}
@@ -4864,9 +4865,9 @@ public class ERXPropertyListSerialization {
 		 * @throws IOException
 		 */
 		private void parseUnicodeString(byte[] bytes, int index, int count) throws IOException {
-			String encoding = "UTF-8";
-			if (Charset.isSupported("UTF-16BE")) {
-				encoding = "UTF-16BE";
+			String encoding = CharEncoding.UTF_8;
+			if (Charset.isSupported("UTF-16BE")) { // CHECKME isn't UTF-16BE mandatory for any JVM?
+				encoding = CharEncoding.UTF_16BE;
 			}
 			// The count is teh number of char not the number of bytes. With UTF-16BE there is 2 bytes per char.
 			objectTable.add(new String(bytes, index, count * 2, encoding));
@@ -5060,19 +5061,19 @@ public class ERXPropertyListSerialization {
 		private byte[] encodeString(String value) {
 			try {
 				NSMutableData data = new NSMutableData(value.length() * 2);
-				String encoding = "UTF-8";
+				String encoding = CharEncoding.UTF_8;
 				// This is kind of funky we do a first encoding to see if we can get away with ASCII encoding
 				// This is true if UTF-8 encoding yield the same length as the char count.
 				byte[] theBytes = value.getBytes(encoding);
 	
 				if (theBytes.length == value.length()) {
-					data.appendBytes(this.encodeCount(value.length(), Type.kCFBinaryPlistMarkerASCIIString));
+					data.appendBytes(encodeCount(value.length(), Type.kCFBinaryPlistMarkerASCIIString));
 				} else {
 					if (Charset.isSupported("UTF-16BE")) {
-						encoding = "UTF-16BE";
+						encoding = CharEncoding.UTF_16BE;
 					}
 					theBytes = value.getBytes(encoding);
-					data.appendBytes(this.encodeCount(value.length(), Type.kCFBinaryPlistMarkerUnicode16String));
+					data.appendBytes(encodeCount(value.length(), Type.kCFBinaryPlistMarkerUnicode16String));
 				}
 				data.appendBytes(theBytes);
 				return data.bytes();
@@ -5107,7 +5108,7 @@ public class ERXPropertyListSerialization {
 		 */
 		private byte[] encodeData(byte[] theData) {
 			NSMutableData data = new NSMutableData(theData.length + 8);
-			data.appendBytes(this.encodeCount(theData.length, Type.kCFBinaryPlistMarkerData));
+			data.appendBytes(encodeCount(theData.length, Type.kCFBinaryPlistMarkerData));
 			data.appendBytes(theData);
 			return data.bytes();
 		}
@@ -5914,7 +5915,7 @@ public class ERXPropertyListSerialization {
 	 */
 	@Deprecated
 	public static <K, V> NSDictionary<K, V> dictionaryWithInputStream(InputStream is) {
-		return dictionaryWithInputStream(is, "UTF-8");
+		return dictionaryWithInputStream(is, CharEncoding.UTF_8);
 	}
 	
 	/**
